[metadata]
name = piainstaller
author = Simon Piette
author-email = piette.simon@gmail.com
summary = Install PIA world wide configuration into NetworkManager
license = ASL
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/piainstaller
requires-python = >=2.7
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    piainstaller
